# near-indexer-base

./: Cargo.toml  README.md  benchmarks.sql  for_other_projects.sql  how_to_connect_to_aurora.md
migrations/: 20220221161526_initial.sql  20220527133753_indexes.sql
redshift/: REDSHIFT_NOTES.md  migration.sql
src/: configs.rs  main.rs  utils.rs
src/db_adapters/: access_keys.rs  account_changes.rs  accounts.rs  blocks.rs  chunks.rs  execution_outcomes.rs  mod.rs  receipts.rs  transactions.rs
src/models/: access_keys.rs  account_changes.rs  accounts.rs  blocks.rs  chunks.rs  enums.rs  execution_outcomes.rs  mod.rs  receipts.rs  serializers.rs  transactions.rs
