[package]
name = "near-lake-flows-into-sql"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
anyhow = "1.0.51"
bigdecimal = { version = "0.2", features = ["serde"] }
#rust_decimal = "1.22.0"
dotenv = "0.15.0"
futures = "0.3.5"
itertools = "0.9.0"
num-traits = "0.2.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "mysql", "bigdecimal"] }

near-indexer-primitives = { git = "https://github.com/near/nearcore", rev = "ea731e37efd2db44313a2769ad5b0e12ae9c3e34" }
near-lake-framework = { git = "https://github.com/near/near-lake-framework", rev = "e27eecbb20fd26b2efeaa21ebb998db47521a73e" }
