[package]
name = "near-lake-flows-into-sql"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
anyhow = "1.0.51"
bigdecimal = { version = "0.2", features = ["serde"] }
cached = "0.23.0"
dotenv = "0.15.0"
futures = "0.3.5"
itertools = "0.9.0"
num-traits = "0.2.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "mysql", "bigdecimal"] }

near-indexer-primitives = { git = "https://github.com/near/nearcore", rev = "5f09a3bf042b32d1ff26554433ad6449199ea02a" }
near-lake-framework = { git = "https://github.com/near/near-lake-framework", rev = "ed73d8552728cb340ce2659f6e94a3f3d5f3f5c0" }
