[package]
name = "near-lake-flows-into-sql"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
anyhow = "1.0.51"
base64 = "0.11"
bigdecimal = { version = "0.2", features = ["serde"] }
borsh = "0.7.1"
cached = "0.23.0"
dotenv = "0.15.0"
futures = "0.3.5"
hex = "0.4"
itertools = "0.9.0"
# syn version conflict, replace with crates.io version once released
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev="03487c184d37b0382dd9bd41c57466acad58fc1f" }
num-traits = "0.2.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
#sha2 = "0.9.1"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "mysql", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

near-indexer-primitives = { git = "https://github.com/near/nearcore", rev = "5f09a3bf042b32d1ff26554433ad6449199ea02a" }
near-crypto = { git = "https://github.com/near/nearcore", rev = "5f09a3bf042b32d1ff26554433ad6449199ea02a" }
near-lake-framework = { git = "https://github.com/near/near-lake-framework", rev = "582c2996b77eb3a2ea96bca839249f55c209a015" }
